.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: meditrack
  name: ingress-meditrack
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
          - path: /api/patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 8081
          - path: /api/appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 8082
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8083
          - path: /api/aggregation
            pathType: Prefix
            backend:
              service:
                name: aggregator-service
                port:
                  number: 8084
